# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
.github/workflows/: main.yml
page_analyzer/: app.py  config.py  db.py  functions.py  parsing.py  validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
